--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "animate.css": "^4.1.0",
+        "font-awesome": "^4.7.0",
+        "imagehover.css": "^2.0.0",
+        "jquery-aniview": "^1.0.2",
         "moment": "^2.27.0",
+        "owl.carousel": "^2.3.4",
         "vee-validate": "^3.3.7",
         "vue-router": "^3.3.4"
     }
